<?xml version="1.0" encoding="utf-8"?>
<!--Использвуется при окончании времени таймера -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/green_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="235dp">


        <TextView
            android:id="@+id/end_time_text"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/end_timer_text"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/end_time_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/end_time_text2"
            android:textColor="@color/grey"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="323dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/dark_rect"
            android:padding="8dp"
            app:srcCompat="@drawable/funny_rhino" />

        <Button
            android:id="@+id/go_to_main_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:gravity="center"

            android:background="@drawable/dark_green_button_selector"
            app:backgroundTint="@null"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/go_to_main_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/go_to_next_task_end_timer"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/dark_green_button_selector"
            app:backgroundTint="@null"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/go_to_next_task"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>