<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/welcome_description"
        android:layout_width="258dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="90dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_horizontal"
        android:text="@string/welcome_description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/enter_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="344dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="0dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/welcome_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/no_account"
        android:layout_width="294dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="30dp"
        android:layout_marginBottom="216dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_horizontal"
        android:text="@string/no_account"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="321dp"
        android:layout_height="51dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="30dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/blue_button_selector"
        app:backgroundTint="@null"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/no_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>