<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/green_background">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/concentrate"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:text="@string/concentrate_hint"/>

    <TextView
        android:id="@+id/timerText"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:fontFamily="@font/roboto_bold"
        android:background="@drawable/dark_rect"
        android:gravity="center"
        android:hint="@string/zero_time"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="366dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dark_rect"
        android:padding="10dp"
        app:srcCompat="@drawable/rhino" />


        <ProgressBar
            android:id="@+id/timerBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:max="100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <Button
            android:id="@+id/end_timer"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/dark_green_button_selector"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:onClick="TODO"
            android:text="@string/end_timer"
            android:textColor="@color/white"
            app:backgroundTint="@null" />
    <Button
        android:id="@+id/nextItemTimer"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/dark_green_button_selector"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:onClick="TODO"
        android:text="@string/end_timer"
        android:textColor="@color/white"
        app:backgroundTint="@null" />





</LinearLayout>