<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/green_background"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="688dp"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_welcome"
                android:layout_width="221dp"
                android:layout_height="87dp"
                android:fontFamily="@font/alegreya_bold"
                android:gravity="center_vertical"
                android:text="@string/welcome_main"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/textView_planes"
                android:layout_width="221dp"
                android:layout_height="33dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/alegreya_bold"
                android:gravity="center_vertical"
                android:text="@string/planes_mail"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_welcome"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlCompat" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="159dp"
                android:layout_height="120dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/logo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="406dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/dark_rect" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/dark_rect"
            android:orientation="vertical">

            <Button
                android:id="@+id/addButton"
                android:layout_width="100dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@drawable/white_button_selector"
                app:backgroundTint="@null"
                android:fontFamily="@font/roboto_regular"
                android:onClick="add"
                android:text="@string/add_button"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/calendarButton"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="100dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@drawable/white_button_selector"
                app:backgroundTint="@null"
                android:fontFamily="@font/roboto_regular"
                android:onClick="delete"
                android:text="@string/delete_button"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/calendarButton"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/calendarButton"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@drawable/dark_green_button_selector"
                app:backgroundTint="@null"
                android:fontFamily="@font/roboto_regular"
                android:onClick="startTimer"
                android:text="@string/start_task_button"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/deleteButton"
                app:layout_constraintStart_toEndOf="@+id/addButton" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</LinearLayout>